tests/snapshot/error/source_locations/loads/load_from_module_uninitialized.js
x = 2;

export let x = 1;